src/styles/global.css
@layer base, tailwindcss;

@import "tailwindcss" layer(tailwindcss);

@font-face {
      font-family: "Saira";
      src:
            url("/fonts/Saira/Saira-VariableFont_wdth,wght.ttf") format("truetype"),
            url("/fonts/Saira/Saira-Italic-VariableFont_wdth,wght.ttf") format("truetype");
      font-display: swap;
      size-adjust: 88%;
      ascent-override: 95%;
      descent-override: 20%;
      line-gap-override: 0%;
}

@layer base {
      body {
            min-width: 100vw;
            min-height: 100vh;

            font-family: "Saira", calibri, sans-serif;

            background-color: black;
            
            margin: 0;
            padding: 0;

            overflow-x: hidden;
            overflow-y: auto;

            color: white;
      }

      button {
            cursor: pointer;
      }

      .custom-shiny-element, .custom-window-level-shiny-element {
            position: relative;
            overflow: hidden;

            --shiny-width: 200%;
            --shiny-opaque: 80%;
      }

      .custom-shiny-element {
            --opacity: 0;
      }
      
      .custom-shiny-element::after, .custom-window-level-shiny-element::after {
            content: '';
            position: absolute;
            /* left: 0;
            top: 0; */
            left: var(--mouse-pos-left);
            top: var(--mouse-pos-top);

            transform: translate(-50%, -50%);

            width: var(--shiny-width);
            aspect-ratio: 1 / 1;

            border-radius: 50%;

            pointer-events: none;
            z-index: 100;
      }

      .custom-window-level-shiny-element::after {
            background-image: radial-gradient(#61c4, #61c2 30%, #fff0 var(--shiny-opaque));
      }
      
      .custom-shiny-element::after {
            background-image: radial-gradient(#fff3, #fff1 var(--shiny-opaque), #fff0);
            opacity: var(--opacity);
            transition: opacity 1s;
      }

      ::selection {
            background-color: #95f;
            color: #111;
      }
}

